-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-panama
-
Component/s: tools
-
None
-
x86
-
generic
universalNativeInvoker_x86.cpp and universalUpcallHandler_x86.cpp use fld_x and fstp_x instructions. These have been removed (ifdef'ed out for LP64 mode) from MacroAssembler class (see also JDK-7175279). This results in build failure.
panama/src/hotspot/cpu/x86/universalNativeInvoker_x86.cpp:161:8: error: no member named ‘fstp_x’ in ‘MacroAssembler’
__ fstp_x(Address(ctxt_reg, (int)offs)); //pop ST(0)
~~ ^
1 error generated.
make[3]: *** [panama/build/macosx-x86_64-server-release/hotspot/variant-server/libjvm/objs/universalNativeInvoker_x86.o] Error 1
make[3]: *** Waiting for unfinished jobs....
panama/src/hotspot/cpu/x86/universalUpcallHandler_x86.cpp:219:10: error: no member named ‘fld_x’ in ‘MacroAssembler’
__ fld_x (Address(rsp, (int)offs));
~~ ^
1 error generated.
make[3]: *** [panama/build/macosx-x86_64-server-release/hotspot/variant-server/libjvm/objs/universalUpcallHandler_x86.o] Error 1
make[2]: *** [hotspot-server-libs] Error 2
ERROR: Build failed for target ‘images’ in configuration ‘macosx-x86_64-server-release’ (exit code 2)
panama/src/hotspot/cpu/x86/universalNativeInvoker_x86.cpp:161:8: error: no member named ‘fstp_x’ in ‘MacroAssembler’
__ fstp_x(Address(ctxt_reg, (int)offs)); //pop ST(0)
~~ ^
1 error generated.
make[3]: *** [panama/build/macosx-x86_64-server-release/hotspot/variant-server/libjvm/objs/universalNativeInvoker_x86.o] Error 1
make[3]: *** Waiting for unfinished jobs....
panama/src/hotspot/cpu/x86/universalUpcallHandler_x86.cpp:219:10: error: no member named ‘fld_x’ in ‘MacroAssembler’
__ fld_x (Address(rsp, (int)offs));
~~ ^
1 error generated.
make[3]: *** [panama/build/macosx-x86_64-server-release/hotspot/variant-server/libjvm/objs/universalUpcallHandler_x86.o] Error 1
make[2]: *** [hotspot-server-libs] Error 2
ERROR: Build failed for target ‘images’ in configuration ‘macosx-x86_64-server-release’ (exit code 2)
- relates to
-
JDK-7175279 Don't use x87 FPU on x86-64
-
- Resolved
-
- links to
-
Commit
openjdk/panama-foreign/d10d186f