8238217: panama fails to build because of use of x87 instructions in 64 bit mode

Reviewed-by: mcimadamore